--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.1.0",
     "bootstrap": "^5.3.3",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "rxjs": "~7.8.0",
     "signature_pad": "^5.0.2",
     "tslib": "^2.3.0",
